# deltafi-contracts

./: .gitignore  .rustfmt.toml  Cargo.toml  do.sh  docker-compose.yml
.github/workflows/: ci.yaml
lib/client/: package-lock.json  package.json
lib/client/src/: admin.ts  constants.ts  farm.ts  index.ts  instructions.ts  layout.ts
lib/client/src/instructions/: admin.ts  swap.ts
lib/client/src/struct/: fees.ts  index.ts  rewards.ts  struct.ts
lib/client/src/util/: account.ts
lib/client/test/: admin.int.test.ts  e2e.int.test.ts  farm.test.ts  helpers.ts  swap.test.ts
proptest-regressions/state/: liquidity.txt
scripts/: cargo-test-bpf.sh
src/: admin.rs  bn.rs  curve.rs  curve_1.rs  entrypoint.rs  error.rs  fees.rs  instruction.rs  lib.rs  math.rs  math2.rs  oracle.rs  pool_converter.rs  pricing.rs  processor.rs  pyth_price.rs  rewards.rs  state.rs  utils.rs  v1curve.rs  v2curve.rs
src/curve/: calc.rs  mod.rs  pmm.rs  pool.rs
src/math/: approximations.rs  decimal.rs  mod.rs  rate.rs
src/state/: config.rs  fees.rs  liquidity.rs  mod.rs  rewards.rs  swap.rs
tests/: commit_new_admin.rs  do_swap.rs  init_config.rs  init_swap.rs  init_swap_config.rs  init_swap_pool.rs  utils.rs
tests/utils/: mod.rs
